# docker-example-v2

./: README.md  docker-bake.hcl  docker-compose.yml  docker_compose_tasks.py
python_service/: Dockerfile  README.md  pyproject.toml
shared/: Dockerfile
webapp/: Dockerfile  angular.json  nginx.conf  package-lock.json
