[tool.poetry]
name = "python-service"
version = "0.1.0"
description = ""
authors = ["konstantin-dudersky <konstantin.dudersky@gmail.com>"]
readme = "README.md"
packages = [{ include = "python_service" }]

[tool.poetry.dependencies]
python = "^3.11"

fastapi = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
